--- a/src/component/cart/Cart.module.css
+++ b/src/component/cart/Cart.module.css
@@ -1,6 +1,7 @@
 .image {
     position: absolute;
-    height: 182vh;
+    height: 151vh;
+    width: 100%;
 }
 
 .content {
@@ -14,6 +15,12 @@
 .text {
     margin-left: 5%;
     display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.text-right {
+    text-align: right;
 }
 
 .text1 {
@@ -34,6 +41,7 @@
     display: flex;
     justify-content: space-between;
     line-height: 175%;
+    margin-top: 4%;
 }
 
 .textbottom {
@@ -44,6 +52,7 @@
     font-size: larger;
     color: rgba(106, 64, 41, 1);
 }
+
 .box-card {
     background-color: #fff;
     width: 150%;
@@ -55,6 +64,7 @@
     align-items: center;
 
 }
+
 .content-left {
     display: flex;
     flex-direction: column;
@@ -68,9 +78,10 @@
 .card-order {
     display: flex;
     flex-direction: column;
+    width: 80%;
 }
 
-.card-order-sub{
+.card-order-sub {
     display: flex;
     flex-direction: row;
     margin-bottom: 5%;
@@ -105,16 +116,16 @@
 }
 
 .btn {
-    color:#fff;
+    color: #fff;
     background-color: rgba(106, 64, 41, 1);
     margin: 5% 0;
     padding: 2% 0;
     border-radius: 10px;
     width: 120%;
     height: 45px;
-  }
-  
-  .btn:hover {
+}
+
+.btn:hover {
     color: rgba(106, 64, 41, 1);
     background-color: rgba(255, 186, 51, 1);
-  }
+}
