--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -1,52 +1,98 @@
 .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 15vh;
-    align-items: center;
-    margin-left: 3%;
-    margin-right: 3%;
-  }
-  
-  .navbar-left {
-    display: flex;
-    flex-direction: row;
-    width: 20vw;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .navbar-left h1 {
-    font-weight: bold;
-  }
-  
-  .navbar-middle {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 40vw;
-  }
-  
-  .navbar-right {
-    display: flex;
-    justify-content: space-evenly;
-    width: 25vw;
-  }
-  
-  .btn-navbar {
-    background-color: rgba(255, 186, 51, 1);
-    color:rgba(106, 64, 41, 1);
-    width: 10vw;
-    height: 7vh;
-    border-radius: 10px;
-    cursor: pointer;
-    text-align: center;
-  }
-  
-  .btn-navbar:hover {
-    color: rgba(255, 186, 51, 1);
-    background-color:rgba(106, 64, 41, 1);
-  }
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 15vh;
+  align-items: center;
+  margin-left: 3%;
+  margin-right: 3%;
+}
 
+.container-nav {
+  display: flex;
+  width: 40%;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.navbar-left {
+  display: flex;
+  flex-direction: row;
+  width: 20vw;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+}
+
+.navbar-left h1 {
+  font-weight: bold;
+}
+
+.navbar-middle {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 40vw;
+}
+
+.navbar-right {
+  display: flex;
+  justify-content: space-evenly;
+  width: 25vw;
+}
+
+.btn-navbar {
+  background-color: rgba(255, 186, 51, 1);
+  color: rgba(106, 64, 41, 1);
+  width: 10vw;
+  height: 7vh;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.btn-navbar:hover {
+  color: rgba(255, 186, 51, 1);
+  background-color: rgba(106, 64, 41, 1);
+}
+
+.image {
+  width: 38px;
+  height: 38px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.image2 {
+  width: 28px;
+  height: 28px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  box-shadow: 0px 0px 3px grey;
+  background-color: #fff;
+  top: 80px;
+  width: 7%;
+  border-radius: 4px;
+  z-index: 10;
+  cursor: pointer;
+}
+
+.dropdown-menu::before {
+  display: none;
+}
+
+.dropdown-menu ul {
+  list-style: none;
+  padding: 0;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
+  color: grey;
+  padding: 3px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
