--- a/src/styles/detailproduct/DetailProduct.module.css
+++ b/src/styles/detailproduct/DetailProduct.module.css
@@ -20,6 +20,10 @@
     display: flex;
     flex-direction: column;
   }
+
+  .image {
+    width: 400px;
+  }
   
   .text1 {
     font-family: 'Poppins', sans-serif;
