--- a/src/component/cart/Cart.module.css
+++ b/src/component/cart/Cart.module.css
@@ -1,15 +1,15 @@
 .image {
     position: absolute;
-    height: 151vh;
     width: 100%;
 }
 
 .content {
     position: relative;
     display: flex;
-    padding: 10%;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    padding: 5% 0;
+    background-image: url('/image/payment.png')
 }
 
 .text {
@@ -57,12 +57,11 @@
     background-color: #fff;
     width: 150%;
     border-radius: 8px;
-    padding: 15% 5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
+    padding: 4% 0;
 }
 
 .content-left {
@@ -71,7 +70,6 @@
 }
 
 .content-right {
-    margin-top: 15%;
     margin-right: 15%;
 }
 
