--- a/src/component/history/History.module.css
+++ b/src/component/history/History.module.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     padding: 5%;
+    background-image: url("/image/imageDetailProduct.png");
     justify-content: space-between;
     align-items: center;
 }
