--- a/src/styles/auth/Login.module.css
+++ b/src/styles/auth/Login.module.css
@@ -8,9 +8,9 @@
 
 .container-image {
     display: flex;
-    background-color: aqua;
     width: 25%;
     justify-content: center;
+    background-image: url('/image/Auth.png');
 }
 
 .image {
@@ -37,7 +37,6 @@
 .top {
     display: flex;
     align-items: center;
-    width: 25%;
     justify-content: space-between;
 }
 
