--- a/src/styles/profile/Profile.module.css
+++ b/src/styles/profile/Profile.module.css
@@ -1,14 +1,15 @@
 .main-container {
-  margin-top: -60px;
-  padding: 0;
+  padding: 2%;
+  background-image: url("/image/profile.png");
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 5% 5%;
-  position: relative;
   box-sizing: border-box;
   width: 80%;
 }
