--- a/src/styles/profile/Profile.module.css
+++ b/src/styles/profile/Profile.module.css
@@ -30,9 +30,11 @@
 }
 
 .profile-left {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6% 5%;
+  padding: 5%;
   text-align: center;
 }
 
@@ -165,6 +167,15 @@
 }
 
 .button-option:hover {
+  background-color: rgba(255, 186, 51, 1);
+  border: 3px solid rgba(106, 64, 41, 1);
+}
+
+.button-option-selected {
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  border-radius: 50px;
   background-color: rgba(255, 186, 51, 1);
   border: 3px solid rgba(106, 64, 41, 1);
 }
